--- a/freefire-tournament-registration-updated.html
+++ b/freefire-tournament-registration-updated.html
@@ -71,10 +71,10 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://i.postimg.cc/bvxDKLd5/Whats-App-Image-2025-05-28-at-11-22-27-AM.jpg" alt="ACT Gamers Guild Logo" class="logo" />
+    <img src="https://via.placeholder.com/150" alt="ACT Gamers Guild Logo" class="logo" />
     <h1>FREE FIRE MAX TOURNAMENT</h1>
     <div class="info">
-      📅 <strong>Date:</strong> May 1st, 2025 at 7:00 PM<br/>
+      🗓 <strong>Date:</strong> May 1st, 2025 at 7:00 PM<br/>
       🎮 <strong>Game Type:</strong> Clash Squad<br/>
       👥 <strong>Team Size:</strong> Squad (4 Players)<br/>
       ⏳ <strong>Registration Deadline:</strong> May 29th, 9:00 PM
